--- a/Assignment UIImagePickerController/Base.lproj/Main.storyboard
+++ b/Assignment UIImagePickerController/Base.lproj/Main.storyboard
@@ -8,40 +8,44 @@
         <scene sceneID="ufC-wZ-h7g">
             <objects>
                 <viewController id="vXZ-lx-hvc" customClass="MTPostsTableViewController" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="192" sectionHeaderHeight="22" sectionFooterHeight="22" id="obR-OR-Wij">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="119" sectionHeaderHeight="22" sectionFooterHeight="22" id="obR-OR-Wij">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="0.0" reuseIdentifier="PostCell" rowHeight="192" id="zQu-aI-efg" customClass="MTPostTableViewCell">
-                                <rect key="frame" x="0.0" y="86" width="320" height="192"/>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="none" accessoryType="disclosureIndicator" indentationWidth="0.0" reuseIdentifier="PostCell" rowHeight="119" id="zQu-aI-efg" customClass="MTPostTableViewCell">
+                                <rect key="frame" x="0.0" y="86" width="320" height="119"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="zQu-aI-efg" id="7EU-x7-XgX">
-                                    <rect key="frame" x="0.0" y="0.0" width="287" height="191"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="287" height="118"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="userName" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vOw-gM-74n">
-                                            <rect key="frame" x="20" y="41" width="79" height="21"/>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="uqt-Y3-XFQ">
+                                            <rect key="frame" x="10" y="10" width="96" height="96"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        </imageView>
+                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="userName" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vOw-gM-74n">
+                                            <rect key="frame" x="119" y="28" width="69" height="17"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" name="TrebuchetMS" family="Trebuchet MS" pointSize="11"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QVv-af-UOM">
-                                            <rect key="frame" x="20" y="18" width="280" height="21"/>
+                                            <rect key="frame" x="119" y="10" width="172" height="17"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <fontDescription key="fontDescription" name="TrebuchetMS" family="Trebuchet MS" pointSize="15"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="content" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="269" translatesAutoresizingMaskIntoConstraints="NO" id="XuP-PM-984">
-                                            <rect key="frame" x="20" y="72" width="269" height="96"/>
+                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="content content content content content content content content content content content content" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="172" translatesAutoresizingMaskIntoConstraints="NO" id="XuP-PM-984">
+                                            <rect key="frame" x="119" y="44" width="172" height="68"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <fontDescription key="fontDescription" name="TrebuchetMS" family="Trebuchet MS" pointSize="12.5"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="timeStamp" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BhD-Pf-lt4">
-                                            <rect key="frame" x="108" y="41" width="192" height="21"/>
+                                            <rect key="frame" x="191" y="28" width="100" height="17"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <fontDescription key="fontDescription" name="TrebuchetMS" family="Trebuchet MS" pointSize="11"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
@@ -49,6 +53,8 @@
                                 <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 <connections>
                                     <outlet property="contentLabel" destination="XuP-PM-984" id="0ci-uc-sQc"/>
+                                    <outlet property="imageView" destination="uqt-Y3-XFQ" id="uWq-Y7-onh"/>
+                                    <outlet property="pictureImageView" destination="uqt-Y3-XFQ" id="3wa-5d-CtC"/>
                                     <outlet property="timeStampLabel" destination="BhD-Pf-lt4" id="G4s-Oh-THU"/>
                                     <outlet property="titleLabel" destination="QVv-af-UOM" id="fI4-aY-sfl"/>
                                     <outlet property="userNameLabel" destination="vOw-gM-74n" id="aNp-pb-9ew"/>
@@ -73,7 +79,7 @@
             </objects>
             <point key="canvasLocation" x="664" y="-82"/>
         </scene>
-        <!--Create Post View Controller - Title-->
+        <!--Create Post View Controller - Create New Post-->
         <scene sceneID="f9b-W3-q6N">
             <objects>
                 <viewController id="Zt6-JN-cxn" customClass="MTCreatePostViewController" sceneMemberID="viewController">
@@ -110,29 +116,44 @@
                                     <navigationItem title="Create New Post" id="mcS-ub-kkz">
                                         <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="H7q-5q-qDz">
                                             <connections>
-                                                <action selector="cancelNewPost:" destination="Zt6-JN-cxn" id="S0g-b2-2Eo"/>
+                                                <action selector="cancelNewPost:" destination="Zt6-JN-cxn" id="Ng1-6H-d5P"/>
+                                            </connections>
+                                        </barButtonItem>
+                                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="oiS-pX-YTn">
+                                            <connections>
+                                                <action selector="publishNewPost:" destination="Zt6-JN-cxn" id="gn5-WO-zmp"/>
                                             </connections>
                                         </barButtonItem>
                                     </navigationItem>
                                 </items>
                             </navigationBar>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WIG-3D-G29">
-                                <rect key="frame" x="128" y="247" width="65" height="30"/>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="wAc-pH-QzO">
+                                <rect key="frame" x="0.0" y="436" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                                <items>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="SC4-Ec-AMH"/>
+                                    <barButtonItem title="Add/Edit/Delete Photo" id="Rmn-Ff-dpc">
+                                        <connections>
+                                            <action selector="showImagePicker:" destination="Zt6-JN-cxn" id="Yaw-gx-Txi"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="XjI-7w-XsH"/>
+                                </items>
+                            </toolbar>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="8g9-vt-uld">
+                                <rect key="frame" x="68" y="237" width="184" height="184"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
-                                <state key="normal" title="Publish">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="publishNewPost:" destination="Zt6-JN-cxn" eventType="touchUpInside" id="59I-L4-FJN"/>
-                                </connections>
-                            </button>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Title" id="HDf-uT-Vqu"/>
+                    <navigationItem key="navigationItem" title="Create New Post" id="HDf-uT-Vqu">
+                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="5cf-kq-vS7"/>
+                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="IlB-6C-rJZ"/>
+                    </navigationItem>
                     <connections>
                         <outlet property="createContentTextField" destination="piS-Q2-vFD" id="d1E-Ui-bOa"/>
+                        <outlet property="createPictureImageView" destination="8g9-vt-uld" id="OlW-EL-bvb"/>
                         <outlet property="createTitleTextField" destination="FGd-jp-9Y8" id="m2i-la-81i"/>
                         <outlet property="createUserNameTextField" destination="DSl-gp-Vrj" id="XOE-V5-Kvw"/>
                     </connections>
@@ -171,6 +192,23 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="dS4-vQ-2U6">
+                                <rect key="frame" x="0.0" y="436" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                                <items>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="Xpp-wm-dub"/>
+                                    <barButtonItem title="Add/Edit/Delete Photo" id="47i-T5-Okb">
+                                        <connections>
+                                            <action selector="showEditImagePicker:" destination="FhF-nY-Gar" id="Mum-aw-Qc2"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="s7t-7N-KZT"/>
+                                </items>
+                            </toolbar>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="cPB-lK-m9B">
+                                <rect key="frame" x="68" y="237" width="184" height="184"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
@@ -188,6 +226,7 @@
                     </navigationItem>
                     <connections>
                         <outlet property="editContentTextField" destination="IMQ-4N-Kik" id="1uA-Vu-X21"/>
+                        <outlet property="editPictureImageView" destination="cPB-lK-m9B" id="iou-bO-3nO"/>
                         <outlet property="editTitleTextField" destination="CsP-E2-Uz6" id="doM-nI-XbG"/>
                         <outlet property="editUserNameTextField" destination="Bgo-0L-3rU" id="keb-an-nm2"/>
                     </connections>
