Fixed the random color issue (Michael solved it — issue with “randomColor” itself - private class term? He says it’s very strange.) Now the “edit” button is broken on the main view

--- a/Assignment UIImagePickerController/Base.lproj/Main.storyboard
+++ b/Assignment UIImagePickerController/Base.lproj/Main.storyboard
@@ -73,6 +73,9 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="tableView" destination="obR-OR-Wij" id="K9I-b5-Pjg"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
